2006-07-07 Borut Razem <borut.razem AT siol.net>

	* components/sdcc-extra.mk: added --host and --build options to
	  configure, so that sdcc-extra can be cross-compiled

2006-07-04 Borut Razem <borut.razem AT siol.net>

	* components/sdcc-extra.mk: accept TARGETXXX configure options

2006-07-03 Borut Razem <borut.razem AT siol.net>

	* local/ppc-osx3.mk: added
	* sdcc-build-bootstrap.sh: Remove the stamp
	* components/sdcc.mk: introduced TARGETCPPFLAGS configure option

2006-06-30 Borut Razem <borut.razem AT siol.net>

	* local/openpower-linux1.mk: added

2006-06-18 Borut Razem <borut.razem AT siol.net>

	* lib/variables.mk, lib/doc-archive.mk, lib/fetch.mk,
	  lib/src-archive.mk, components/sdcc.mk, components/sdcc-extra.mk,
	  sdcc-build-bootstrap.sh:
	  use common ORIG tree with VPATH functionality

2006-06-17 Borut Razem <borut.razem AT siol.net>

	* lib/doc-archive.mk: run configure from the current (SRC) directory
	* lib/variables.mk: get current SVN release from
	  sdcc-builder@shell.cf.sourceforge.net

2006-06-15 Borut Razem <borut.razem AT siol.net>

	* components/sdcc.mk, components/sdcc-extra.mk, lib/bootstrap.mk,
	  lib/doc-archive.mk, lib/variables.mk: preparation for common ORIG tree

2006-06-11 Borut Razem <borut.razem AT siol.net>

	* lib/src-archive.mk, lib/variables.mk: introduced SNAPSHOTID
	* lib/bootstrap.mk: introduced SNAPSHOTID; replaced '_' with '-' in the
	  WIN32 setup name; introduced do-upload target
	* lib/doc-archive.mk: temporary files moved from tmp to build directory,
	  snapshot packages moved to ../snapshots/docs directory
	* lib/fetch.mk: spaces replaced with a tab

2006-05-18  Bernhard Held <bernhard AT bernhardheld.de>

	* components/src-archive.mk: added RELEASE to src-archives, extracted
	from ChangeLog

2006-05-17  Bernhard Held <bernhard AT bernhardheld.de>

	* components/variables.mk: added SDCCRELEASE, extracted from ChangeLog
	* components/bootstrap.mk: added SDCCRELEASE to tarball names
